fixes #311. In FF brand padding was making gap in tab nav header

--- a/static/css/app.less
+++ b/static/css/app.less
@@ -369,7 +369,7 @@ body {
         }
     }
     .brand {
-        padding: 8px 20px;
+        padding: 6px 20px;
         .droidBold;
         .lite {
             font-size: .578em;
